--- a/tropicalBlast/html/confirmacionRegistro.html
+++ b/tropicalBlast/html/confirmacionRegistro.html
@@ -1,13 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-        crossorigin="anonymous">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 
     <title>Confirmacion Registro</title>
@@ -16,7 +15,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navColor">
         <div class="container-fluid">
-            <a class="navbar-brand title" href="../index.html">Logo</a>
+            <a class="navbar-brand logo" href="../index.html"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -46,44 +45,86 @@
 
 
 <body>
-    <div class="containerfluid spacerRegistro">
-        <div class="containerRegistro ">
+    <div class="container-fluid spacerRegistro">
+        <div class="containerRegistro">
 
-        <h2 class="titlesRegistro">Confirmacion de Registro</h2>
+            <h2 class="titlesRegistro">Confirmacion de Registro</h2>
+
+            <div class="containerConfInfo">
+                <input class="obtenerInfo text" placeholder="Nombre Completo"></input>
+            </div>
+            <div class="lines"></div>
+
+            <div class="containerConfInfo">
+                <input class="obtenerInfo text" placeholder="Email"></input>
+            </div>
+
+            <div class="lines"></div>
+
+            <div class="containerConfInfo">
+                <div class="row">
+
+                    <div class="col">
+                        <input class="obtenerInfo text" placeholder="Cedula"></input>
+                    </div>
+
+                    <div class="col">
+                        <input class="obtenerInfo text" placeholder="Numero Telefonico"></input>
+                    </div>
+                </div>
+            </div>
+            <div class="lines"></div>
 
 
-        <input class="obtenerInfo" placeholder="Nombre Completo"></input>
-        <div class="lines"></div>
-        <input class="obtenerInfo" placeholder="Email"></input>
-        <div class="lines"></div>
-        <input class="obtenerInfo" placeholder="Cedula"></input>
-        <div class="lines"></div>
-        <input class="obtenerInfo" placeholder="Numero Telefonico"></input>
-        <div class="lines"></div>
-        <input class="obtenerInfo" placeholder="Tarjeta"></input>
-        <div class="lines"></div>
-        <input class="obtenerInfo" placeholder="Pin de seguridad"></input>
+
+            <div class="containerConfInfo">
+                <div class="row">
+
+                    <div class="col">
+
+                        <input class="obtenerInfo text" placeholder="Tarjeta"></input>
+                    </div>
+
+                    <div class="col-3">
+                        <input class="obtenerInfo text" placeholder="Pin de seguridad"></input>
+                    </div>
+                </div>
+            </div>
 
         </div>
 
         <div class="row">
-        
-            <a class="col nextbackBttn" href="../html/detail.html">
-               <img alt="Imagen de boton para regresar" src="../imgs/antras.png">
+
+            <a class="col nextbackBttn" href="../html/registrarse.html">
+                <img class="nextbtn" alt="Imagen de boton para regresar" src="../imgs/antras.png">
             </a>
 
             <a class="col-1 nextbackBttn" href="../html/resumenRegistro.html">
-               <img alt="Imagen de boton para seguir" src="../imgs/adelante.png">
-            </div>
-        </a>
+                <img class="nextbtn" alt="Imagen de boton para seguir" src="../imgs/adelante.png">
+            </a>
+        </div>
 
     </div>
 
 
 
-        <!--Footer-->
+<!--Footer-->
 
-        <div class="footer">
+<footer>
+    <div class="footer">
+   
+        <p class="footertext">Siguenos:</p>
 
+        <div class="socials">
+            <ul class="footerNavigator">
+                <li class="footerItem"><a class="footerLink" href="#"><i class="fab fa-facebook-square"></i></a></li>
+                <li class="footerItem"><a class="footerLink" href="#"><i class="fab fa-instagram"></i></a></li>
+                <li class="footerItem"><a class="footerLink" href="#"><i class="fab fa-twitter"></i></a></li>
+              </ul>
         </div>
+        <p class="footertext"> copyright &copy;2021 TropycalBlast. </p>
+    </div>      
+    </footer>
+
+      <!--Fin Footer-->
 </body>
