--- a/tropicalBlast/html/registrarse.html
+++ b/tropicalBlast/html/registrarse.html
@@ -1,13 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-        crossorigin="anonymous">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 
     <title>Registrarse</title>
@@ -16,7 +15,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navColor">
         <div class="container-fluid">
-            <a class="navbar-brand title" href="../index.html">Logo</a>
+            <a class="navbar-brand logo" href="../index.html"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -25,14 +24,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="../index.html">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Carrito</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="../html/detail.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Categorias
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                          </ul>
+                      </li>
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -48,100 +52,120 @@
     <div class="containerfluid spacerRegistro">
         <div class="containerRegistro ">
 
-        <h2 class="titlesRegistro">Registro</h2>
+            <h2 class="titlesRegistro">Registro</h2>
 
-        <div class="row">
-            <div class="col">
-                <h3 class="textRegistro">Nombre de eventro</h3>
-            </div>
+            <div class="containerRegistroInfo">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="textRegistro">Nombre de eventro</h3>
+                    </div>
 
-            <div class="col-1">
-                <h3 class="textRegistro">Lugar</h3>
-            </div>
+                    <div class="col-1">
+                        <h3 class="textRegistro">Lugar</h3>
+                    </div>
 
-            <div class="col">
-                <div class="containerFechaR">
-                <h3 class="textRegistro">1/1/2021</h3>
+                    <div class="col">
+                        <div class="containerFechaR">
+                            <h3 class="textRegistro">1/1/2021</h3>
+                        </div>
+                    </div>
+                    <div class="lines"></div>
                 </div>
             </div>
-            <div class="lines"></div>
+
+
+            <div class="containerRegistroInfo">
+                <div class="row align-items-start">
+                    <div class="col">
+                        <h3 class="subTitulleRegistro">Cantidad de personas</h3>
+                    </div>
+
+                    <div class="col-1">
+                        <h3 class="textRegistro">Adulto</h3>
+                    </div>
+
+                    <div class="col">
+                        <input class="submit submitPad"></input>
+                    </div>
+
+                    <div class="col-1">
+                        <h3 class="textRegistro">Niño</h3>
+                    </div>
+
+                    <div class="col">
+                        <input class="submit submitPad"></input>
+                    </div>
+                    <div class="lines"></div>
+                </div>
+            </div>
+
+
+
+            <div class="containerRegistroInfo">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="subTitulleRegistro">Costo por persona</h3>
+                    </div>
+
+                    <div class="col-1">
+                        <h3 class="textRegistro">Adulto</h3>
+                    </div>
+
+                    <div class="col">
+                        <input class="submit submitPad"></input>
+                    </div>
+
+                    <div class="col-1">
+                        <h3 class="textRegistro">Niño</h3>
+                    </div>
+
+                    <div class="col">
+                        <input class="submit submitPad"></input>
+                    </div>
+                    <div class="lines"></div>
+                </div>
+            </div>
+
+            <div class="containerRegistroInfo">
+                <h3 class="textCostoTotal">Costo Total</h3>
+                <div class="col">
+                    <div class="containerTolal">
+                        <h3 class="textRegistro">0000</h3>
+                    </div>
+                </div>
+            </div>
         </div>
-
-
-
-
-        <div class="row align-items-start">
-            <div class="col">
-                <h3 class="subTitulleRegistro">Cantidad de personas</h3>
-            </div>
-
-            <div class="col-1">
-                <h3 class="textRegistro">Adulto</h3>
-            </div>
-
-            <div class="col">
-                <input class="submitt"></input>
-            </div>
-
-            <div class="col-1">
-                <h3 class="textRegistro">Niño</h3>
-            </div>
-
-            <div class="col">
-                <input class="submitt"></input>
-            </div>
-            <div class="lines"></div>
-        </div>
-
-
-
 
         <div class="row">
-            <div class="col">
-                <h3 class="subTitulleRegistro">Costo por persona</h3>
-            </div>
 
-            <div class="col-1">
-                <h3 class="textRegistro">Adulto</h3>
-            </div>
-
-            <div class="col">
-                <input class="submitt"></input>
-            </div>
-
-            <div class="col-1">
-                <h3 class="textRegistro">Niño</h3>
-            </div>
-
-            <div class="col">
-                <input class="submitt"></input>
-            </div>
-            <div class="lines"></div>
-        </div>
-
-        <h3 class="textCostoTotal">Costo Total</h3>
-        <div class="col">
-            <input class="submitt"></input>
-        </div>
-
-        </div>
-
-        <div class="row">
-        
             <a class="col nextbackBttn" href="../html/detail.html">
-               <img alt="Imagen de boton para regresar" src="../imgs/antras.png">
+                <img class="nextbtn" alt="Imagen de boton para regresar" src="../imgs/antras.png">
             </a>
 
             <a class="col-1 nextbackBttn" href="../html/confirmacionRegistro.html">
-               <img alt="Imagen de boton para seguir" src="../imgs/adelante.png">
-            </div>
-        </a>
+                <img class="nextbtn" alt="Imagen de boton para seguir" src="../imgs/adelante.png">
+            </a>
+        </div>
 
     </div>
 
-     <!--Footer-->
+<!--Footer-->
 
-     <div class="footer">
+<footer>
+    <div class="footer">
+   
+        <p class="footertext">Siguenos:</p>
 
-    </div>
+        <div class="socials">
+            <ul class="footerNavigator">
+                <li class="footerItem"><a class="footerLink" href="#"><i class="fab fa-facebook-square"></i></a></li>
+                <li class="footerItem"><a class="footerLink" href="#"><i class="fab fa-instagram"></i></a></li>
+                <li class="footerItem"><a class="footerLink" href="#"><i class="fab fa-twitter"></i></a></li>
+              </ul>
+        </div>
+        <p class="footertext"> copyright &copy;2021 TropycalBlast. </p>
+    </div>      
+    </footer>
+
+      <!--Fin Footer-->
 </body>
